--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: a-mar
 ---
 
     <section class="page-header">
-      <h3 class="project-tagline">This page is intentionally left blank.</h3>
+      <h3 class="project-tagline">This page is intentionally left <s>blank</s> the way it is.</h3>
     </section>
