--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@ layout: default
 title: about a-mar
 ---
 
-<section class="page-header">
-			<h1>Aboat. Aboot. About.</h1>
-</section>
-<p>This is the about page.</p>
+	<section class="about">
+		<h1>Aboat. Aboot. About.</h1>
+	</section>
+		<p>This is the about page.</p>
