--- a/about/index.html
+++ b/about/index.html
@@ -1,9 +1,13 @@
 ---
-layout: pages
+layout: landing
 title: about a-mar
 ---
 
+<section class="page-header">
+      <h1 class="project-name"><a href="/"><img alt="A C O N" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png" width="200"></a></h1>
+</section>
+
 	<section class="about">
 		<h1>Aboat. Aboot. About.</h1>
-	</section>
 		<p>This is the about page.</p>
+	</section>
