--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ title: about a-mar
       <h1 class="project-name"><a href="/"><img alt="A C O N" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png" width="200"></a></h1>
 </section>
 
-	<section class="about">
+	<div class="about">
 		<h1>Aboat. Aboot. About.</h1>
-		<p>This is the about page.</p>
-	</section>
+		<p>This is the about page</p>
+	</div>
