--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,8 @@
 ---
-layout: landing
+layout: post
 title: about a-mar
 ---
-
-<section class="page-header">
-      <h1 class="project-name"><a href="/"><img alt="A C O N" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aar.png" width="200"></a></h1>
-</section>
-
 	<div class="about">
-		<h1>Aboat. Aboot. About.</h1>
+		<h2>Aboat. Aboot. About.</h2>
 		<p>This is the about page</p>
 	</div>
