--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,8 @@
 ---
-layout: post
+layout: landing
 title: about a-mar
 ---
+{% include header.html %}
 	<div class="about">
 		<h2>Aboat. Aboot. About.</h2>
 		<p>This is the about page</p>
