--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,10 @@ layout: landing
 title: about a-mar
 ---
 {% include header.html %}
-	<div class="about">
+
+	<section class="about">
+		
 		<h2>Aboat. Aboot. About.</h2>
 		<p>This is the about page</p>
-	</div>
+		
+	</section>
