--- a/about/index.html
+++ b/about/index.html
@@ -3,9 +3,11 @@ layout: pages
 title: about a-mar
 ---
 
+	<div class="container">
 	<section class="about">
 		
 		<h2>Aboat. Aboot. About.</h2>
 		<p>This is the about page</p>
 		
 	</section>
+	</div>
