--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: landing
 title: a-mar
 ---
 
+{% include nav.html %}
+
     <div class="page-header">
       <h3 class="project-tagline">This page is intentionally left <s>blank</s> the way it is.</h3>
     </div>
