--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: landing
 title: a-mar
 ---
 
-    <div class="page-header">
-      This page is intentionally left <s>blank</s> the way it is.
-    </div>
+    <section class="page-header">
+      <h2 clas="project-tagline">This page is intentionally left <s>blank</s> the way it is.</h2>
+    </section>
