--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: a-mar
 ---
 
     <section class="page-header">
-      <h2 clas="project-tagline">This page is intentionally left <s>blank</s> the way it is.</h2>
+      <h2 class="project-tagline">This page is intentionally left <s>blank</s> the way it is.</h2>
     </section>
