--- a/about/index.html
+++ b/about/index.html
@@ -9,13 +9,13 @@ title: Aboat. Aboot. About. @ a-mar
 	
 <h2>About this website</h2>
 <ul>
-	<li>This website was made with love, lots of head scratching, trials, and errors. But mostly it was made possible through <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.</li>
-	<li>All images are mine, except for those that aren't which to the best of my poor endeavour are all properly cited and linked to their respective owners.</li>
+	<li>Made with love, lots of head scratching, trials, and errors</li>
+	<li>Hosted on <a href="https://github.com/" target="_blank">GitHub through <a href="https://pages.github.com/" target="_blank">GitHub Pages</a></li>
 	<li><strong>In the spirit of responsibility:</strong> I am responsible for content on this website, but not to the content of those that I link to, except for those links whose contents are my responsibility as well.</li>
-	<li>All links are ensured to be accurate (live) as of the time of writing. Some efforts, i.e., when I feel like it, are made to update them, but be not assured of their longevity.</li>
-	<li>Filler text used in the examples were taken from The Essays by <a href="https://en.wikipedia.org/wiki/Francis_Bacon" target="_blank">Sir Francis Bacon</a> from <a href="http://www.gutenberg.org/ebooks/575" target="_blank">Project Gutenberg</a>.</li>
-	<li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fa-mar.github.io%2F" target="_blank">Validation</a></li>
-	<li>The logo (aka the twirling a's) were made from combining four twirling <a title ="Source Serif Pro" href="http://www.fontsquirrel.com/fonts/source-serif-pro" target="_blank">Source Serif Pro</a> (Light), and four twirling <a title="Charter" href="http://practicaltypography.com/charter.html" target="_blank">Charter</a> (Bold Italic) in <a title="Photoshop 7" href="https://en.wikipedia.org/wiki/Adobe_Photoshop_version_history#7.0">Photoshop 7</a>.</li>
+	<li>All links are ensured to be accurate (live) as of the time of writing&mdash;although some efforts, i.e., when I feel like it, are made to update links, be not assured of their longevity</li>
+	<li>Filler text: The Essays by <a href="https://en.wikipedia.org/wiki/Francis_Bacon" target="_blank">Sir Francis Bacon</a> from <a href="http://www.gutenberg.org/ebooks/575" target="_blank">Project Gutenberg</a>.</li>
+	<li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fa-mar.github.io%2F" target="_blank" title="HTML5 Validator">Validation</a></li>
+	<li>The logo (aka the twirling a's) was made from combining four twirling <a title ="Source Serif Pro" href="http://www.fontsquirrel.com/fonts/source-serif-pro" target="_blank">Source Serif Pro</a> (Light), and four twirling <a title="Charter" href="http://practicaltypography.com/charter.html" target="_blank">Charter</a> (Bold Italic) in <a title="Photoshop 7" href="https://en.wikipedia.org/wiki/Adobe_Photoshop_version_history#7.0" target="_blank">Photoshop 7</a>.</li>
 </ul>
 <a href="/" target="_blank"><img class="displayed" alt="Home" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aaol.png" width="83"></a>
 
