--- a/about/index.html
+++ b/about/index.html
@@ -10,6 +10,7 @@ title: Aboat. Aboot. About. @ a-mar
 <h2>About this website</h2>
 <ul>
 	<li>Made with love, lots of head scratching, trials, and errors</li>
+	<li>Ongoing project (aka work in progress)</li>
 	<li>Hosted on <a href="https://github.com/" target="_blank">GitHub through <a href="https://pages.github.com/" target="_blank">GitHub Pages</a></li>
 	<li><strong>In the spirit of responsibility:</strong> I am responsible for content on this website, but not to the content of those that I link to, except for those links whose contents are my responsibility as well.</li>
 	<li>All links are ensured to be accurate (live) as of the time of writing&mdash;although some efforts, i.e., when I feel like it, are made to update links, be not assured of their longevity</li>
