--- a/about/index.html
+++ b/about/index.html
@@ -12,8 +12,6 @@ title: Aboat. Aboot. About. @ a-mar
 	<li>Made with love, lots of head scratching, trials, and errors</li>
 	<li>Ongoing project (aka work in progress)</li>
 	<li>Hosted on <a href="https://github.com/" target="_blank">GitHub</a> through <a href="https://pages.github.com/" target="_blank">GitHub Pages</a></li>
-	<li><strong>In the spirit of responsibility:</strong> I am responsible for content on this website, but not to the content of those that I link to, except for those links whose contents are my responsibility as well.</li>
-	<li>All links are ensured to be accurate (live) as of the time of writing&mdash;although some efforts, i.e., when I feel like it, are made to update links, be not assured of their longevity</li>
 	<li>Filler text: The Essays by <a href="https://en.wikipedia.org/wiki/Francis_Bacon" target="_blank">Sir Francis Bacon</a> from <a href="http://www.gutenberg.org/ebooks/575" target="_blank">Project Gutenberg</a>.</li>
 	<li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fa-mar.github.io%2F" target="_blank" title="HTML5 Validator">Validation</a></li>
 	<li>The logo (aka the twirling a's) was made from combining four twirling <a title ="Source Serif Pro" href="http://www.fontsquirrel.com/fonts/source-serif-pro" target="_blank">Source Serif Pro</a> (Light), and four twirling <a title="Charter" href="http://practicaltypography.com/charter.html" target="_blank">Charter</a> (Bold Italic) in <a title="Photoshop 7" href="https://en.wikipedia.org/wiki/Adobe_Photoshop_version_history#7.0" target="_blank">Photoshop 7</a>.</li>
@@ -26,6 +24,12 @@ title: Aboat. Aboot. About. @ a-mar
 	<li>Menu links and footer in <a target="_blank" title="FF Nuvo" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo</a></li>
 	<li>Headings in <a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a></li>
 	<li>Text in <a target="_blank" title="Fira Sans" href="http://www.carrois.com/fira-4-1/">Fira Sans</a></li>
+</ul>
+
+<h2>In the spirit of responsibility</h2>
+<ul>
+	<li>I am responsible for content on this website, but not to the content of those that I link to, except for those links whose contents are my responsibility as well.</li>
+	<li>All links are ensured to be accurate (live) as of the time of writing&mdash;although some efforts, i.e., when I feel like it, are made to update links, be not assured of their longevity</li>
 </ul>
 
 <h2>About the author</h2>
