--- a/about/index.html
+++ b/about/index.html
@@ -32,5 +32,5 @@ title: Aboat. Aboot. About. @ a-mar
 	<li>All links are ensured to be accurate (live) as of the time of writing&mdash;although some efforts, i.e., when I feel like it, are made to update links, be not assured of their longevity</li>
 </ul>
 
-<h2>About the author</h2>
-<p>The greater part of my life, which as of late has already passed the quarter-century mark, was spent at school.</p>
+<h2>Questions, comments, suggestions, violent reactions?</h2>
+<p><a href="mailto:tiradosinamar@gmx.com?Subject=Hallo%20Mundo" target="_top" title="contact"></a><i class="fa fa-at fa-lg"></i></a></p>
