--- a/about/index.html
+++ b/about/index.html
@@ -30,5 +30,5 @@ title: Aboat. Aboot. About. @ a-mar
 <ul>
 	<li>I am responsible for content on this website, but not to the content of those that I link to, except for those links whose contents are my responsibility as well.</li>
 	<li>All links are ensured to be accurate (live) as of the time of writing&mdash;although some efforts, i.e., when I feel like it, are made to update links, be not assured of their longevity</li>
-	<li>Contact: <a href="mailto:tiradosinamar@gmx.com?Subject=Hallo%20Mundo" target="_top" title="contact"><i class="fa fa-envelope-o fa-2x"></i></a></li>
+	<li>Contact: <a href="mailto:tiradosinamar@gmx.com?Subject=Hallo%20Mundo" target="_top" title="contact"><i class="fa fa-envelope-o fa-lg"></i></a></li>
 </ul>
