--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: landing
 title: a-mar
 ---
 
+<div class="container">
     <section class="page-header">
       <h2 class="project-tagline">This page is intentionally left <s>blank</s> the way it is.</h2>
     </section>
+</div>
