--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: landinga
 title: Aboat. Aboot. About. @ a-mar
 ---
-
+<div class="container">
 <section class="page-header">
 	<h2 class="project-tagline">Aboat. Aboot. About.</h2>	
 </section>
@@ -32,3 +32,4 @@ title: Aboat. Aboot. About. @ a-mar
 	<li>All links are ensured to be accurate (live) as of the time of writing&mdash;although some efforts, i.e., when I feel like it, are made to update links, be not assured of their longevity</li>
 	<li>Contact: <a href="mailto:tiradosinamar@gmx.com?Subject=Hallo%20Mundo" target="_top" title="contact"><i class="fa fa-envelope-o fa-lg"></i></a></li>
 </ul>
+</div>
