--- a/about/index.html
+++ b/about/index.html
@@ -16,6 +16,7 @@ title: Aboat. Aboot. About. @ a-mar
 	<li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fa-mar.github.io%2F" target="_blank" title="HTML5 Validator">Validation</a></li>
 	<li>The logo (aka the twirling lowercase a's) was made from combining <a title ="Source Serif Pro" href="http://www.fontsquirrel.com/fonts/source-serif-pro" target="_blank">Source Serif Pro</a> (Light), and <a title="Charter" href="http://practicaltypography.com/charter.html" target="_blank">Charter</a> (Bold Italic) in <a title="Photoshop 7" href="https://en.wikipedia.org/wiki/Adobe_Photoshop_version_history#7.0" target="_blank">Photoshop 7</a>.</li>
 </ul>
+<link rel="import" href="https://raw.githubusercontent.com/a-mar/shiz/master/aaol.html">
 <a href="/" target="_blank"><img class="displayed" alt="Home" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aaol.png" width="83"></a>
 
 <h2>Typography</h2>
