--- a/about/index.html
+++ b/about/index.html
@@ -18,12 +18,13 @@ title: Aboat. Aboot. About. @ a-mar
 </ul>
 <a href="/" target="_blank"><img class="displayed" alt="Home" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aaol.png" width="83"></a>
 
-<h2>Typography</h2>
+<h2>Typefaces</h2>
 <ul>
-	<li>Titles in <a target="_blank" title="FF Bauer Grotesk" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk</a></li>
-	<li>Menu links and footer in <a target="_blank" title="FF Nuvo" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo</a></li>
-	<li>Headings in <a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a></li>
-	<li>Text in <a target="_blank" title="Fira Sans" href="http://www.carrois.com/fira-4-1/">Fira Sans</a></li>
+	<li><a target="_blank" title="FF Bauer Grotesk" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk</a> &ndash; Titles</li>
+	<li><a target="_blank" title="FF Nuvo" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo</a> &ndash; Menu links and footer</li>
+	<li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a> &ndash; Headings</li>
+	<li><a target="_blank" title="Fira Sans" href="http://www.carrois.com/fira-4-1/">Fira Sans</a> &ndash; Text</li>
+	<li><a target="_blank" title="Fira Mono" href="http://www.carrois.com/fira-4-1/">Fira Mono</a> &ndash; Code</li>
 </ul>
 
 <h2>In the spirit of responsibility</h2>
