--- a/about/index.html
+++ b/about/index.html
@@ -21,8 +21,8 @@ title: Aboat. Aboot. About. @ a-mar
 <h2>Typefaces</h2>
 <ul>
 	<li><a target="_blank" title="FF Bauer Grotesk" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk</a> &ndash; Titles</li>
-	<li><a target="_blank" title="FF Nuvo" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo</a> &ndash; Menu links and footer</li>
-	<li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a> &ndash; Headings</li>
+	<li><a target="_blank" title="FF Nuvo" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo</a> &ndash; Headings, menu links, and footer text</li>
+	<!--<li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a> &ndash; Headings</li>-->
 	<li><a target="_blank" title="Fira Sans" href="http://www.carrois.com/fira-4-1/">Fira Sans</a> &ndash; Text</li>
 	<li><a target="_blank" title="Fira Mono" href="http://www.carrois.com/fira-4-1/">Fira Mono</a> &ndash; Code</li>
 </ul>
