--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,7 @@ title: Aboat. Aboot. About. @ a-mar
 	<li><a target="_blank" title="FF Nuvo" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo</a> &ndash; Headings, menu links, and footer text</li>
 	<!--<li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a> &ndash; Headings</li>-->
 	<li><a target="_blank" title="Fira Sans" href="http://www.carrois.com/fira-4-1/">Fira Sans</a> &ndash; Text</li>
-	<li><a target="_blank" title="Fira Mono" href="http://www.carrois.com/fira-4-1/">Fira Mono</a> &ndash; Code</li>
+	<li><a target="_blank" title="Source Code Pro" href="https://github.com/adobe-fonts/source-code-pro">Source Code Pro</a> &ndash; Code</li>
 </ul>
 
 <h2>In the spirit of responsibility</h2>
