--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ title: Aboat. Aboot. About. @ a-mar
 <section class="page-header">
 	<h2 class="project-tagline">Aboat. Aboot. About.</h2>	
 </section>
-	
+<p>This website was created to document my thesis writing shenanigans using <code style="font-size:100%;">LaTeX</code>. Whilst at it, I thought might as well learn about <code style="font-size:100%;">css</code> and <code style="font-size:100%;">html</code>&mdash;somewhat akin to hitting three birds in one stone, and methinks this project managed to combine all three.</p>
 <h2>About this website</h2>
 <ul>
 	<li>Made with love, lots of head scratching, trials, and errors</li>
