--- a/about/index.html
+++ b/about/index.html
@@ -14,17 +14,17 @@ title: Aboat. Aboot. About. @ a-mar
 	<li>Hosted on <a href="https://github.com/" target="_blank">GitHub</a> through <a href="https://pages.github.com/" target="_blank">GitHub Pages</a></li>
 	<!--<li>Filler text: The Essays by <a href="https://en.wikipedia.org/wiki/Francis_Bacon" target="_blank">Sir Francis Bacon</a> from <a href="http://www.gutenberg.org/ebooks/575" target="_blank">Project Gutenberg</a>.</li>-->
 	<li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fa-mar.github.io%2F" target="_blank" title="HTML5 Validator">Validation</a></li>
-	<li>The logo (aka the twirling lowercase a's) was made from combining <a title ="Source Serif Pro" href="http://www.fontsquirrel.com/fonts/source-serif-pro" target="_blank">Source Serif Pro</a> (Light), and <a title="Charter" href="http://practicaltypography.com/charter.html" target="_blank">Charter</a> (Bold Italic) in <a title="Photoshop 7" href="https://en.wikipedia.org/wiki/Adobe_Photoshop_version_history#7.0" target="_blank">Photoshop 7</a>.</li>
+	<li>The logo was made from combining <a href="http://www.fontsquirrel.com/fonts/source-serif-pro" target="_blank">Source Serif Pro</a> (Light), and <a href="http://practicaltypography.com/charter.html" target="_blank">Charter</a> (Bold Italic) in <a title="Photoshop 7" href="https://en.wikipedia.org/wiki/Adobe_Photoshop_version_history#7.0" target="_blank">Photoshop 7</a>. It was inspired a wee bit by <a href="https://www.myfonts.com/fonts/linotype/sabon/" target="_blank" title="Linotype Sabon">this.</a></li>
 </ul>
 <a href="/" target="_blank"><img class="displayed" alt="Home" src="https://raw.githubusercontent.com/a-mar/shiz/master/meh/aaol.png" width="83"></a>
 
 <h2>Typefaces</h2>
 <ul>
-	<li><a target="_blank" title="FF Bauer Grotesk" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk</a> &ndash; Titles</li>
-	<li><a target="_blank" title="FF Nuvo" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo</a> &ndash; Headings, menu links, and footer text</li>
+	<li><a target="_blank" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk</a> &ndash; Titles</li>
+	<li><a target="_blank" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo</a> &ndash; Headings, menu links, and footer text</li>
 	<!--<li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a> &ndash; Headings</li>-->
-	<li><a target="_blank" title="Fira Sans" href="http://www.carrois.com/fira-4-1/">Fira Sans</a> &ndash; Text</li>
-	<li><a target="_blank" title="Source Code Pro" href="https://github.com/adobe-fonts/source-code-pro">Source Code Pro</a> &ndash; Code</li>
+	<li><a target="_blank" href="http://www.carrois.com/fira-4-1/">Fira Sans</a> &ndash; Text</li>
+	<li><a target="_blank" href="https://github.com/adobe-fonts/source-code-pro">Source Code Pro</a> &ndash; Code</li>
 </ul>
 
 <h2>In the spirit of responsibility</h2>
