--- a/about/index.html
+++ b/about/index.html
@@ -17,9 +17,9 @@ title: Aboat. Aboot. About. @ a-mar
 
 <h2>Typefaces</h2>
 <ul>
+  <li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a> &ndash; Header and footer</li>
 	<li><a target="_blank" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk</a> &ndash; Titles</li>
-	<li><a target="_blank" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo</a> &ndash; Headings, menu links, and footer text</li>
-	<!--<li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a> &ndash; Headings</li>-->
+	<li><a target="_blank" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo</a> &ndash; Headings</li>
 	<!--<li><a target="_blank" href="http://www.carrois.com/fira-4-1/">Fira Sans</a> &ndash; Text</li>-->
 	<li><a target="_blank" href="https://github.com/adobe-fonts/source-serif-pro">Source Serif Pro</a> &ndash; Body text</li>
 	<li><a target="_blank" href="https://github.com/adobe-fonts/source-code-pro">Source Code Pro</a> &ndash; Code</li>
