--- a/about/index.html
+++ b/about/index.html
@@ -15,14 +15,14 @@ title: Aboat. Aboot. About. @ a-mar
 	<li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fa-mar.github.io%2F" target="_blank" title="HTML5 Validator">Validation</a></li>
 </ul>
 
-<h2>Typefaces</h2>
+<h2>Typography</h2>
 <ul>
-  <li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a> &ndash; Header and footer</li>
-	<li><a target="_blank" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk</a> &ndash; Titles</li>
-	<li><a target="_blank" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo</a> &ndash; Headings</li>
+	<li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a> &ndash; Header and footer</li>
+	<li><a target="_blank" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk (Medium)</a> &ndash; Titles</li>
+	<li><a target="_blank" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo (Medium)</a> &ndash; Headings</li>
 	<!--<li><a target="_blank" href="http://www.carrois.com/fira-4-1/">Fira Sans</a> &ndash; Text</li>-->
-	<li><a target="_blank" href="https://github.com/adobe-fonts/source-serif-pro">Source Serif Pro</a> &ndash; Body text</li>
-	<li><a target="_blank" href="https://github.com/adobe-fonts/source-code-pro">Source Code Pro</a> &ndash; Code</li>
+	<li><a target="_blank" href="https://github.com/adobe-fonts/source-serif-pro">Source Serif Pro (Light and Regular)</a> &ndash; Body text</li>
+	<li><a target="_blank" href="https://github.com/adobe-fonts/source-code-pro">Source Code Pro (Regular and Regular Italic)</a> &ndash; Code</li>
 </ul>
 
 <h2>In the spirit of responsibility</h2>
