--- a/about/index.html
+++ b/about/index.html
@@ -4,31 +4,30 @@ title: Aboat. Aboot. About. @ a-mar
 ---
 <div class="container">
 <section class="page-header">
-	<h2 class="project-tagline">Aboat. Aboot. About.</h2>	
+   <h2 class="project-tagline">Aboat. Aboot. About.</h2>	
 </section>
 <p>This website was created to document my thesis writing shenanigans using <code>LaTeX</code>. Whilst at it, I thought might as well learn about <code>css</code> and <code>html</code>&mdash;ergo hit three birds with one stone&mdash;and methinks this project manages to do just that.</p>
 <h2>About this website</h2>
 <ul>
-	<li>Made with love, lots of head scratching, trials, and errors</li>
-	<li>Ongoing project (aka work in progress)</li>
-	<li>Hosted on <a href="https://github.com/" target="_blank">GitHub</a> through <a href="https://pages.github.com/" target="_blank">GitHub Pages</a></li>
-	<li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fa-mar.github.io%2F" target="_blank" title="HTML5 Validator">Validation</a></li>
+   <li>Made with love, lots of head scratching, trials, and errors</li>
+   <li>Ongoing project (aka work in progress)</li>
+   <li>Hosted on <a href="https://github.com/" target="_blank">GitHub</a> through <a href="https://pages.github.com/" target="_blank">GitHub Pages</a></li>
+   <li><a href="https://validator.w3.org/nu/?doc=http%3A%2F%2Fa-mar.github.io%2F" target="_blank" title="HTML5 Validator">Validation</a></li>
 </ul>
 
 <h2>Typography</h2>
 <ul>
-	<li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt</a> &ndash; Header and footer</li>
-	<li><a target="_blank" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk (Medium)</a> &ndash; Titles</li>
-	<li><a target="_blank" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo (Medium)</a> &ndash; Headings</li>
-	<!--<li><a target="_blank" href="http://www.carrois.com/fira-4-1/">Fira Sans</a> &ndash; Text</li>-->
-	<li><a target="_blank" href="https://github.com/adobe-fonts/source-serif-pro">Source Serif Pro (Light and Regular)</a> &ndash; Body text</li>
-	<li><a target="_blank" href="https://github.com/adobe-fonts/source-code-pro">Source Code Pro (Regular and Regular Italic)</a> &ndash; Code</li>
+   <li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt (Light)</a> &ndash; Header and footer</li>
+   <li><a target="_blank" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk (Medium)</a> &ndash; Titles</li>
+   <li><a target="_blank" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo (Medium)</a> &ndash; Headings</li>
+   <li><a target="_blank" href="https://github.com/adobe-fonts/source-serif-pro">Source Serif Pro (Light and Regular)</a> &ndash; Body text</li>
+   <li><a target="_blank" href="https://github.com/adobe-fonts/source-code-pro">Source Code Pro (Regular and Regular Italic)</a> &ndash; Code</li>
 </ul>
 
 <h2>In the spirit of responsibility</h2>
 <ul>
-	<li>I am responsible for content on this website, but not to the content of those that I link to, except for those links whose contents are my responsibility as well.</li>
-	<li>All links are ensured to be accurate (live) as of the time of writing&mdash;although some efforts, i.e., when I feel like it, are made to update links, be not assured of their longevity</li>
-	<li>Contact: <a href="mailto:tiradosinamar@gmx.com?Subject=Hallo%20Mundo" target="_top" title="contact"><i class="fa fa-envelope-o fa-lg"></i></a></li>
+   <li>I am responsible for content on this website, but not to the content of those that I link to, except for those links whose contents are my responsibility as well.</li>
+   <li>All links are ensured to be accurate (live) as of the time of writing&mdash;although some efforts, i.e., when I feel like it, are made to update links, be not assured of their longevity</li>
+   <li>Contact: <a href="mailto:tiradosinamar@gmx.com?Subject=Hallo%20Mundo" target="_top" title="contact"><i class="fa fa-envelope-o fa-lg"></i></a></li>
 </ul>
 </div>
