--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@ title: Aboat. Aboot. About. @ a-mar
 <h2>Typography</h2>
 <ul>
    <li><a target="_blank" title="Cooper Hewitt" href="http://www.cooperhewitt.org/open-source-at-cooper-hewitt/cooper-hewitt-the-typeface-by-chester-jenkins/">Cooper Hewitt (Light)</a> &ndash; Header and footer</li>
-   <li><a target="_blank" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk (Medium)</a> &ndash; Titles and &ldquo;Some notes&rdquo;</li>
+   <li><a target="_blank" href="https://www.fontfont.com/fonts/bauer-grotesk">FF Bauer Grotesk (Medium)</a> &ndash; Titles, &ldquo;Some notes&rdquo;, and numbered list items</li>
    <li><a target="_blank" href="https://www.fontfont.com/fonts/nuvo">FF Nuvo (Medium)</a> &ndash; Headings</li>
    <li><a target="_blank" href="https://github.com/adobe-fonts/source-serif-pro">Source Serif Pro (Light and Regular)</a> &ndash; Body text</li>
    <li><a target="_blank" href="https://github.com/adobe-fonts/source-code-pro">Source Code Pro (Regular and Regular Italic)</a> &ndash; Code</li>
