--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: landinga
-title: Aboat. Aboot. About. &ndash; a-mar
+title: Aboat. Aboot. About. &#8226; a-mar
 ---
 <div class="container">
 <section class="page-header">
